WebContent/vle/js/node/fillin/fillin.css
#promptdiv {
	font-size:.92em;
	color:#000;
	width:600px;
	margin:15px 10px 5px 10px;
	font-weight:bold;
}

.instructionsReminder {
	float:right;
	text-align:right;
	margin: 12px 15px 0 0 ;
	font-size:.8em;
	color:#333333;
}

#currentFillBlankParagraph {
	margin: 0 auto;
	padding:10px 0 0 0;
	text-align:left;
	}
	
#currentFillBlankParagraph #leftColumn { 
	float:left;
	width:77%;
	background-color:#FFCE8E;
	}
	
#currentFillBlankParagraph #rightColumn {
	padding:10px 0;
	text-align:center;
	margin-left:79%;
	background-color:#6883BA;
	color:#FFF;
	}
	
.itemLabel {
	font-size:.7em;
	text-transform:uppercase;
	color:#543F23;
	margin:2px 0 0 15px;
	font-weight:bold;
}

#nonInteractiveDiv p {
	margin: 5px 15px 20px 15px;
	font-size:.9em;
	line-height:190%;
}

#nonInteractiveDiv input{
	position:relative;
	bottom:4px;
	font-family:"Courier New",Courier,monospace;
	font-size:1.0em;
	color:#333;
	background-color:#FFCE8E;
	border:none;
	border-bottom:1px solid black;
	text-align:center;
	width:120px;
	margin: 0 6px;
	
}

#nonInteractiveDiv .activeBlank {
	font-family:"Courier New",Courier,monospace;
	color:#164CBA;
	background-color:#FFCE8E;
	border:none;
	border-bottom:1px solid #164CBA;
	text-align:center;
	font-size:1.0em;
	font-weight:bold;
	width:120px;
	margin: 0 6px;
}

#nonInteractiveDiv .completedBlank {
	font-family:"Courier New",Courier,monospace;
	color:green;
	border:none;
	font-size:1.0em;
}

#interactiveDiv {
	width:80%;
	margin:15px 5px 15px 40px;
	text-transform:uppercase;
	padding:2px;
	font-size:.80em;
	color:#164CBA;
	vertical-align:text-top;
}

#responsebox {
	width:60%; 
	font-style:normal;
	font-weight:bold;
	color:#164CBA;
	border:1px solid #333;
	padding:5px;
	margin-left:10px;
	font-size:1.1em;
}

#clearBoth {
	clear:both;
	margin:0px;
	padding:0px;
}

#triesContainer {
	margin:10px auto 8px auto;
	border-collapse:collapse;
	text-align:left;
	background-color:#CCCCCC;
	}

#triesContainer th {
	font-size:.8em;
	color:#333;
	margin:0px;
	padding:2px 0 2px 20px;
}

#triesContainer td {
	font-size:.8em;
	color:#333;
	margin:0px;
	padding:2px 20px;
	font-weight:bold;
}

